# rpi_lsm9ds1

./: .gitignore  ChangeLog  README  README.md  configure.ac
src/: Makefile.am  become_daemon.c  become_daemon.h  gpio.c  gpio.h  lsm9ds1.c  lsm9ds1.h  lsm9ds1_regs.h  main.c  options.c  options.h  spi.c  spi.h
systemd/: Makefile.am  lsm9ds1.service
